@@ -1,3 +1,10 @@
+2017-02-10  Oliver Lemke  <olemke@core-dump.info>
+
+	* typhon/arts/scattering.py (SingleScatteringData):
+
+	Add support for version 3. Version 2 data is automatically upgraded to
+	version 3 for non-azimuthally random particles.
+
 2017-02-08  Lukas Kluft  <lukas.kluft@gmail.com>
 
 	* typhon/plots/colors.py:
